✨ feat: add GetDayToDayExpensesPeriod presenter
